# OCR

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  V1.md  docker-compose.yml  next-imp.md  plan.md
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: documents.py
backend/app/models/: __init__.py  document.py
backend/app/ocr/: base.py  easyocr.py  paddleocr.py  registry.py  tesseract.py
backend/app/schemas/: document.py
backend/app/services/: document_loader.py  preprocessing.py
backend/app/tasks/: celery_app.py  ocr_tasks.py
backend/tests/: conftest.py  test_document_loader.py  test_documents_api.py  test_easyocr.py  test_health.py  test_paddleocr.py  test_preprocessing.py  test_registry.py  test_tesseract.py
docs/: README.md
frontend/: README.md
infra/: README.md
