[project]
name = "ocrdil-backend"
version = "0.2.0"
description = "OCR Benchmark & Document Intelligence Lab — API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2.3",
    "redis>=5.2.0",
    "celery>=5.4.0",
    "python-multipart>=0.0.17",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.10.0",
    "pillow>=11.0.0",
    "pytesseract>=0.3.13",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
ocr = [
    "easyocr>=1.7.2",
    "paddleocr>=2.9.0",
    "paddlepaddle>=2.6.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "pytesseract.*",
    "easyocr.*",
    "paddleocr.*",
    "fitz.*",
    "celery.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/celery_app.py"]

[tool.coverage.report]
show_missing = true
